Changing csrf token to have id in its name for clarity

--- a/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Categories/FormTheme/category.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Categories/FormTheme/category.html.twig
@@ -23,7 +23,7 @@
                 {% endif %}
                 <button class="btn btn-outline-danger btn-sm js-form-submit-btn"
                         data-form-submit-url="{{ preview_image.delete_path }}"
-                        data-form-csrf-token="{{ csrf_token(csrf_delete_token) }}"
+                        data-form-csrf-token="{{ csrf_token(csrf_delete_token_id) }}"
                 >
                   <i class="material-icons">
                     delete_forever
